<resources>
  <string name="app_name">AnimationApp</string>
  <string name="text_view_animation_alpha">透明度</string>
  <string name="text_view_animation_rotate">旋转</string>
  <string name="text_view_animation_translate">位移</string>
  <string name="text_view_animation_scale">缩放</string>
  <string name="text_view_animation_set_def">组合</string>
  <string name="text_view_animation_set_first">组合1</string>
  <string name="text_view_animation_set_sec">组合2</string>
  <string name="text_view_animation_tips_title">Tips:</string>
  <string name="text_view_animation_tips_content_set_sec">
    1. 这是通过xml文件写的一个视图动画，它里面有多个动画，且多个动画默认是同时进行的。\n
    2. 通过设置android：startOffset=1000 来控制多个动画出现时间，注意这里的是该动画与set组里动画的第一个动画的时延，而非上一个动画。\n
    3. 通过设置android:fillAfter=true来实现保持动画的“残影”显示，这不违背视图动画的“只是演示，没有发生变化”的效果，就相当于动画进行到最后点击
    暂停按钮.再次点击按钮,可以发现只有点击之前按钮的位置才会有响应，通过打log可以得出btn.getX/getY在动画前后维持不变。
  </string>
  <string name="title_view_animation_activity">视图动画</string>
  <string name="title_object_animation_activity">Object Animation</string>
  <string name="text_object_animation_tips_def">
    1. 属性动画跟视觉动画的不同，首先在于属性动画改变的是view的真实属性，它的动画效果结束后，view的状态也会发生变化。可以比较视觉跟属性的“缩放”，会发现点击属性动画缩放后的区域，是有响应的。\n
    2. 同时，属性动画支持很高的扩展性，同样是缩放，但是这里的“缩放”是去改变空间的width而不是把整个内容扩大，可以看到点击缩放并没有把文字放大。\n
    3. 但是，我发现制作动画最好要把他们写成一个“闭合”的回路，比如说“透明度”和“位移”，正因为属性动画把view的状态真实改变了，在点击第二次或者更多，就会发现初始状态总是从不透明到透明，而“位移”写成一个回路，看起来就舒服很多。
  </string>
  <string name="anim_svg_line">线图动画</string>
  <string name="anim_svg_three_ball">三球仪</string>
  <string name="anim_svg_path">轨迹动画</string>
  <string name="anim_svg_static_tips">效果图:</string>

  <string name="btn_text_timer">计时器</string>
  <string name="btn_text_yuan">¥%1$d</string>
  <string name="btn_text_drop_down">下降出现动画</string>
  <string name="btn_text_show">暂时只是显示</string>
  <string name="btn_text_add">ADD</string>
  <string name="btn_test_delete">DELETE</string>
  <string name="title_recycler_view">RecyclerView</string>
  
  <string name="btn_text_explode">分解</string>
  <string name="btn_text_slide">滑动</string>
  <string name="btn_text_fade">淡出</string>
  <string name="btn_text_share">共享</string>
  <string name="btn_text_fab">组合</string>

  <string name="btn_text_start">Start</string>
  <string name="notification_title">notification_title</string>
  <string name="notification_content">notification_content</string>
  <string name="btn_text_expand">Expand</string>
</resources>
