<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center_horizontal"
      >

    <Button
        android:id="@+id/btn_view_animation_alpha"
        android:text="@string/text_view_animation_alpha"
        style="@style/ViewAnimation.Button"
        />

    <Button
        android:id="@+id/btn_view_animation_rotate"
        android:text="@string/text_view_animation_rotate"
        style="@style/ViewAnimation.Button"
        />

    <Button
        android:id="@+id/btn_view_animation_translate"
        android:text="@string/text_view_animation_translate"
        style="@style/ViewAnimation.Button"
        />

    <Button
        android:id="@+id/btn_view_animation_scale"
        android:text="@string/text_view_animation_scale"
        style="@style/ViewAnimation.Button"
        />

    <Button
        android:id="@+id/btn_view_animation_set_first"
        android:text="@string/text_view_animation_set_first"
        style="@style/ViewAnimation.Button"
        />
    <Button
        android:id="@+id/btn_view_animation_set_sec"
        android:text="@string/text_view_animation_set_sec"
        style="@style/ViewAnimation.Button"
        />
    <TextView
        android:id="@+id/text_view_animation_tips_title"
        style="@style/ViewAnimation.Text"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/text_view_animation_tips_title"
        />
    <TextView
        android:id="@+id/text_view_animation_tips_content"
        style="@style/ViewAnimation.Text"
        tools:text="this is a long long long long long long long long long long long long long tips"
        />
  </LinearLayout>
</ScrollView>